--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark sticky-top" style="z-index: 1000;" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand fw-bold" href="#" style="letter-spacing: 1px;">Draft</a>
-        
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    
+
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -16,9 +16,9 @@
             </ul>
 
             <ul class="navbar-nav ms-auto align-items-center">
-                
+
                 <% if (locals.user) { %>
-                    
+
                     <li class="nav-item me-2">
                         <a class="nav-link" href="/blog/addNew">Add Blog</a>
                     </li>
@@ -27,10 +27,8 @@
                         <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
 
-                            <img src="<%= locals.user.profileImageURL %>" 
-                                 alt="Profile" width="32" height="32" 
-                                 class="rounded-circle me-2 border border-secondary"
-                                 style="object-fit: cover;">
+                            <img src="<%= locals.user.profileImageURL %>" alt="Profile" width="32" height="32"
+                                class="rounded-circle me-2 border border-secondary" style="object-fit: cover;">
 
                             <%= locals.user.fullName %>
                         </a>
@@ -39,14 +37,14 @@
                         </ul>
                     </li>
 
-                <% } else { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/signin">SignIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/user/signup">Create Account</a>
-                    </li>
-                <% } %>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/signin">SignIn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/user/signup">Create Account</a>
+                        </li>
+                        <% } %>
 
             </ul>
         </div>
@@ -59,4 +57,4 @@
             <%= locals.error %>
         </div>
     </div>
-<% } %>
+    <% } %>
